tests/NormalTests/paczka1/small_fuzzy/10483700.err
Error in line 1: ZhlAMxlKl1 A823 63,0
Error in line 3: ZhlAMxlKl1 S273 99,5
Error in line 2: S141 A823 75,4
